# chmicro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/hello/: hello_service.cpp
examples/kv/: kv_service.cpp
examples/loadgen/: http_loadgen.cpp
include/chmicro/config/: config.h
include/chmicro/core/: log.h  metrics.h  status.h  trace.h
include/chmicro/governance/: load_balancer.h  service_discovery.h
include/chmicro/http/: http_client.h  http_server.h  router.h  types.h
include/chmicro/resilience/: circuit_breaker.h  retry.h
include/chmicro/runtime/: app.h  io_context_pool.h
src/config/: config.cpp
src/core/: log.cpp  metrics.cpp  status.cpp  trace.cpp
src/governance/: load_balancer.cpp  service_discovery.cpp
src/http/: http_client.cpp  http_server.cpp  router.cpp
src/resilience/: circuit_breaker.cpp  retry.cpp
src/runtime/: app.cpp  io_context_pool.cpp
tests/: test_circuit_breaker.cpp  test_main.cpp  test_router.cpp  test_trace.cpp
